management-ui/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: management-ui
spec:
    selector:
        matchLabels:
            app: management-ui
    replicas: 1
    template:
        metadata:
            labels:
                app: management-ui
        spec:
            containers:
            - name: management-ui
              image: docker.cognigy.com:5000/management-ui:e2323e29b2405e50b8b17ae9323e65bac579a173
              resources:
                limits:
                    memory: "30Mi"
                    cpu: "20m"
                requests:
                    memory: "10Mi"
                    cpu: "10m"
            imagePullSecrets:
              - name: cognigy-registry-token
