management-ui/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: management-ui
    labels:
        app: management-ui
spec:
    ports:
        - port: 8000
    selector:
        app: management-ui
