management-ui/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: management-ui
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    rules:
    - host: management-ui-v4.cognigy.ai
      http:
        paths:
        - path: /
          backend:
              serviceName: management-ui
              servicePort: 8000
